[gd_scene load_steps=10 format=3 uid="uid://bu40rgbtav6x5"]

[ext_resource type="Script" uid="uid://piloo72r1dye" path="res://scripts/player.gd" id="1_p0vlq"]
[ext_resource type="AudioStream" uid="uid://bvo5ve46l1p8k" path="res://assets/Sounds/heavy-footsteps-walking-35722.mp3" id="2_3li8b"]
[ext_resource type="PackedScene" uid="uid://bh7bh05xf70kt" path="res://interaction/InteractionController.tscn" id="2_qu4a1"]
[ext_resource type="AudioStream" uid="uid://bdtl8raws0eb7" path="res://assets/Sounds/tinnitus-31244.mp3" id="2_v6fml"]
[ext_resource type="PackedScene" uid="uid://cti8r4yot6ak1" path="res://scenes/Letter1.tscn" id="3_khinc"]
[ext_resource type="Texture2D" uid="uid://ds0k57u2iuf7l" path="res://assets/white_reticle.png" id="4_mdl7e"]
[ext_resource type="Texture2D" uid="uid://4oo331p221ig" path="res://assets/tile_0155.png" id="6_cw2d6"]
[ext_resource type="Texture2D" uid="uid://cy8vfn8wa3wh7" path="res://assets/tile_0156.png" id="7_khinc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p0vlq"]
radius = 0.33447266
height = 1.5

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_p0vlq")

[node name="InteractionController" parent="." instance=ExtResource("2_qu4a1")]
unique_name_in_owner = true

[node name="Ears" type="AudioListener3D" parent="."]

[node name="Body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_p0vlq")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 0, 0.1)
cull_mask = 524285
current = true

[node name="InteractionRaycast" type="RayCast3D" parent="Neck/Camera3D"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)

[node name="Hand" type="Marker3D" parent="Neck/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="AudioListener3D" type="AudioListener3D" parent="Neck"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Neck"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Neck/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="NoteCamera" type="Camera3D" parent="Neck/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 1.6, 0.1)
cull_mask = 2

[node name="NoteHand" type="Marker3D" parent="Neck/SubViewportContainer/SubViewport/NoteCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9559366, -0.2935732, 0, 0.2935732, 0.9559366, -0.69899297, -0.13493764, -0.82601094)

[node name="Letter1Note" parent="Neck/SubViewportContainer/SubViewport/NoteCamera/NoteHand" instance=ExtResource("3_khinc")]

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.018434048, 0)
stream = ExtResource("2_3li8b")

[node name="RingingPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.018434048, 0)
stream = ExtResource("2_v6fml")
max_db = -15.0
autoplay = true

[node name="GUI" type="Node" parent="."]

[node name="Reticle" type="CanvasLayer" parent="GUI"]

[node name="Control" type="Control" parent="GUI/Reticle"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DefaultReticle" type="TextureRect" parent="GUI/Reticle/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_mdl7e")
stretch_mode = 3

[node name="HighlightReticle" type="TextureRect" parent="GUI/Reticle/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_cw2d6")
stretch_mode = 3

[node name="InteractingReticle" type="TextureRect" parent="GUI/Reticle/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_khinc")
stretch_mode = 3
